# python-project-template

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
scripts/: setup-github.ps1  setup-github.sh
src/{{project_name}}/: __init__.py
